crates/openid/src/snapshots/vercre_openid__issuer__tests__authorization_details.snap
---
source: crates/openid/src/issuer.rs
assertion_line: 1724
expression: request.authorization_details
---
- type: openid_credential
  credential_configuration_id: EmployeeID_JWT
  credential_definition:
    credentialSubject:
      email: {}
      family_name: {}
      given_name: {}
