crates/openid/src/snapshots/vercre_openid__issuer__tests__authorization_format.snap
---
source: crates/openid/src/issuer.rs
assertion_line: 2153
expression: "&serialized"
---
authorization_details=%5B%7B%22credential_definition%22%3A%7B%22type%22%3A%5B%22VerifiableCredential%22%2C%22EmployeeIDCredential%22%5D%7D%2C%22format%22%3A%22jwt_vc_json%22%2C%22type%22%3A%22openid_credential%22%7D%5D&client_id=1234&code_challenge=1234&code_challenge_method=S256&credential_issuer=https%3A%2F%2Fexample.com&redirect_uri=http%3A%2F%2Flocalhost%3A3000%2Fcallback&response_type=code&state=1234&subject_id=1234&wallet_issuer=1234
