crates/openid/src/snapshots/vercre_openid__issuer__tests__authzn-ok.snap
---
source: crates/openid/src/issuer.rs
assertion_line: 1427
expression: "&auth_req_str"
---
response_type=code&client_id=1234&redirect_uri=http%3A%2F%2Flocalhost%3A3000%2Fcallback&state=1234&code_challenge=1234&code_challenge_method=S256&authorization_details=%5B%7B%22type%22%3A%22openid_credential%22%2C%22format%22%3A%22jwt_vc_json%22%2C%22credential_definition%22%3A%7B%22%40context%22%3A%5B%22https%3A%2F%2Fwww.w3.org%2F2018%2Fcredentials%2Fv1%22%2C%22https%3A%2F%2Fwww.w3.org%2F2018%2Fcredentials%2Fexamples%2Fv1%22%5D%2C%22type%22%3A%5B%22VerifiableCredential%22%2C%22EmployeeIDCredential%22%5D%7D%7D%5D&subject_id=1234&wallet_issuer=1234
