crates/openid/src/snapshots/vercre_openid__issuer__tests__claim_label_display_default.snap
---
source: crates/openid/src/issuer.rs
assertion_line: 2484
expression: "&default"
snapshot_kind: text
---
- Address.Country
- Address.Locality
- Address.Region
- Address.Street Address
- Email
- Family name
- Given name
