crates/openid/src/snapshots/vercre_openid__issuer__tests__credential_definition.snap
---
source: crates/openid/src/issuer.rs
assertion_line: 1575
expression: "&deserialized"
---
credential_issuer: "https://example.com"
access_token: "1234"
format: jwt_vc_json
credential_definition:
  type:
    - VerifiableCredential
    - EmployeeIDCredential
proof:
  proof_type: jwt
  jwt: SomeJWT
