crates/openid/src/snapshots/vercre_openid__issuer__tests__credential_identifier.snap
---
source: crates/openid/src/issuer.rs
assertion_line: 1716
expression: "&deserialized"
---
credential_issuer: "https://example.com"
access_token: "1234"
credential_identifier: EngineeringDegree2023
proof:
  proof_type: jwt
  jwt: SomeJWT
