crates/openid/src/snapshots/vercre_openid__issuer__tests__multiple-proof.snap
---
source: crates/openid/src/issuer.rs
assertion_line: 1556
expression: "&deserialized"
---
credential_issuer: "https://example.com"
access_token: "1234"
credential_identifier: UniversityDegree_JWT
proofs:
  jwt:
    - SomeJWT1
    - SomeJWT2
