crates/openid/src/snapshots/vercre_openid__issuer__tests__multiple_proofs.snap
---
source: crates/openid/src/issuer.rs
assertion_line: 1795
expression: "&deserialized"
---
credential_issuer: "https://example.com"
access_token: "1234"
credential_identifier: EngineeringDegree2023
proofs:
  jwt:
    - SomeJWT1
    - SomeJWT2
