crates/openid/src/snapshots/vercre_openid__issuer__tests__single-proof.snap
---
source: crates/openid/src/issuer.rs
assertion_line: 1522
expression: "&deserialized"
---
credential_issuer: "https://example.com"
access_token: "1234"
credential_identifier: UniversityDegree_JWT
proof:
  proof_type: jwt
  jwt: SomeJWT
